src/styles/content.scss
@import './helpers/mixins';
@import './queue/queue';
@import './queue/queue_share';

.style-visited a[href^='/videos/']:visited { // video link
  color: var(--visited-color);
}

div.enhancer-queueButton {
  top: 8px;
  bottom: unset;
  padding: 0 4px;
  line-height: 0;
  opacity: 0;
  transition: opacity 0.1s ease-in-out;
  pointer-events: initial;

  &%hover {
    opacity: 1;
  }

  @include hov {
    @extend %hover;
  }
  $self: &;
  @at-root img, picture {
    @include hov {
      & ~ #{$self} {
        @extend %hover;
      }
    }
  }

  svg {
    width: 19px;
    height: 19px;
    padding: 3px;
    fill: white;
    fill: currentColor;
    transition: width 0.1s ease-in-out, height 0.1s ease-in-out;
    pointer-events: initial;
  }
  @include hov {
    svg {
      width: 22px;
      height: 22px;
    }
  }
  @include mobile {
    opacity: 1;
  }
}

a.enhancer-queueButtonAll {
  color: inherit;

  svg {
    width: 12px;
    height: 12px;
    fill: white;
    fill: currentColor;
  }
}

.enhancer-yt-err {
  display: none;
}

.vjs-control .vjs-button, .vjs-control.vjs-button {
  // need to set these manually again ...
  position: relative;
  font-family: VideoJS;

  &::before {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    font-size: 1.8em;
    line-height: 1.67;
  }

  &:not([disabled])::before {
    cursor: pointer;
  }
}

.enhancer-tooltip {
  position: absolute;
  bottom: 48px;
}

